Probe events - collapse resolved observers

--- a/probe/core/src/main/client/basic.css
+++ b/probe/core/src/main/client/basic.css
@@ -290,7 +290,7 @@ div.bda-beans {
   display: inline-block;
 }
 
-div.let-width-3 {
+a.let-width-3, div.let-width-3 {
   width: 3em;
 }
 
